# git-buildpackage

./: .coveragerc  .dir-locals.el  .gitignore  .gitlab-ci.yml  .gitmodules  .pydoctor.cfg  .travis.yml  HACKING  HACKING.md  Makefile  README  README.md  TODO  dev_requirements.txt  gbp-clone  gbp-create-remote-repo  gbp-pq  gbp-pull  gbp.conf  git-buildpackage  git-dch  git-debuild  git-import-dsc  git-import-dscs  git-import-orig  git-pbuilder  git_buildpackage.py  pydoctor.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  version_parser.py
.gitlab-ci/: commit-rules.yml
debian/: NEWS  README.Debian  bug-presubj  changelog  clean  control  copyright  doc-base  docs  gbp.completion  gbp.conf  git-buildpackage-rpm.install  git-buildpackage-rpm.manpages  git-buildpackage.bash-completion  git-buildpackage.doc-base  git-buildpackage.docs  git-buildpackage.install  git-buildpackage.links  git-buildpackage.manpages  git-buildpackage.postinst  git-buildpackage.postrm  git-buildpackage.preinst  git-buildpackage.zsh-completion  links  manpages  not-installed  pk4  rules  salsa-ci.yml
docs/: Makefile  Makefile.lang  common.ent  copyright.sgml  copyright.xml  entities  gbp.css  git-buildpackage.sgml  git-import-dsc.sgml  git-import-orig.sgml  local-nosgml2x.dsl  local.dsl  man.gbp-buildpackage-rpm.xml  man.gbp-buildpackage.sgml  man.gbp-buildpackage.xml  man.gbp-clone.sgml  man.gbp-clone.xml  man.gbp-config.sgml  man.gbp-config.xml  man.gbp-create-remote-repo.xml  man.gbp-dch.sgml  man.gbp-dch.xml  man.gbp-export-orig.xml  man.gbp-import-dsc.xml  man.gbp-pq.sgml  (+27 more)
(+324 files in other folders)
