[tool:pytest]
addopts = --ignore=examples/ --ignore=tests/component/rpm/data --ignore=tests/component/deb/data --doctest-modules --cov-report term --cov-report xml:coverage.xml --cov=gbp

[flake8]
# E501: ignore line length
# E265: block comment should start with '# '
ignore=E501,E265,W504
builtins=unicode,execfile,raw_input
exclude = venv

[metadata]
name = gbp
author = Guido Günther
author_email = agx@sigxcpu.org
url = https://honk.sigxcpu.org/piki/projects/git-buildpackage/
description = Suite to help with Debian packages in Git repositories
long_description = file: README.md
license = GPLv2-or-later
classifiers =
    Environment :: Console
    Programming Language :: Python :: 3
    Topic :: Software Development :: Version Control
    Operating System :: POSIX :: Linux

[options]
include_package_data = True
packages = find:
python_requires = >=3.11
install_requires =
    python-dateutil
    importlib-metadata; python_version<"3.8"
scripts =
    bin/git-pbuilder
    bin/gbp-builder-mock

[options.data_files]
share/git_buildpackage = gbp.conf

[options.entry_points]
console_scripts =
    gbp = gbp.scripts.supercommand:supercommand

[options.packages.find]
exclude =
    tests
    tests.*
